Added split metadata as QgsExpressionContext to the splitFeatures method. The following variables are now available in a default value expression for a field: - @sm_predecessor_ids : that stores the predecessor ids as comma separated values - @sm_operation_type : the operation id which is 1 for split - @sm_operation_date : the date of the split operation that is equal for all new created features in a split operation
The following expression can be used to set the predecessor ids to a field named "predecessors":
"CASE WHEN @sm_operation_type IS 1 THEN @sm_predecessor_ids ELSE predecessors END"

Important: in case several split operations are performed without saving the layer, then negative predecessor ids are generated, since the autogeneration of the ids is performed by the data provider while saving.

Added several unittests.

--- a/tests/src/python/CMakeLists.txt
+++ b/tests/src/python/CMakeLists.txt
@@ -423,6 +423,7 @@ ADD_PYTHON_TEST(PyQgsActionWidgetWrapper test_qgsactionwidgetwrapper.py)
 ADD_PYTHON_TEST(PyQgsAttributeEditorAction test_qgsattributeeditoraction.py)
 ADD_PYTHON_TEST(PyQgsVectorTile test_qgsvectortile.py)
 ADD_PYTHON_TEST(PyQgsVtpk test_qgsvtpk.py)
+ADD_PYTHON_TEST(PyQgsVectorLayerEditUtilsSplit test_qgsvectorlayereditutils_split_metadata.py)
 
 if (NOT WIN32)
   ADD_PYTHON_TEST(PyQgsLogger test_qgslogger.py)
